# haversine

./: .gitignore  CMakeLists.txt  README.md  go.mod
cmd/gendata/: gendata.go
src/: common.h  haversine.c  haversine.h  main.c  parser.c
